--- a/sycl/doc/extensions/proposed/sycl_ext_oneapi_async_memory_alloc.asciidoc
+++ b/sycl/doc/extensions/proposed/sycl_ext_oneapi_async_memory_alloc.asciidoc
@@ -246,7 +246,7 @@ int main(int argc, char *argv[])
     = q.get_context().ext_oneapi_get_default_memory_pool(
         q.get_device(), usm::alloc::device);
 
-  memPool.set_new_threshold(1024);
+  memPool.increase_threshold_to(1024);
   
   {
     // memory pool allocates memory from the SYCL runtime
@@ -295,6 +295,22 @@ table below.  Applications can test for the existence of this macro to determine
 if the implementation supports this feature, or applications can test the
 macro's value to determine which of the extension's features the implementation
 supports.
+
+
+=== Querying async memory alloc support
+
+The following device query is provided to query whether a SYCL implementation
+provides support for async memory allocation on a particular device.
+
+The device aspects for this query is:
+
+[frame="none",options="header"]
+|======================
+|Device descriptor |Description
+|`aspect::ext_oneapi_async_memory_alloc` | Indicates if the device supports 
+asynchronous memory allocation and memory pools.
+|======================
+
 
 [%header,cols="1,5"]
 |===
@@ -373,8 +389,8 @@ them adhere to the following behaviors:
   between subsequent asynchronous malloc commends, however, it is not required
   to.
 * The amount of total and free memory reported by the memory pool is updated
-  immediately after returning from calls to enqueue asynchronous malloc and free
-  commands, even if the command does not execute immediately.
+  immediately after returning from calls to enqueue asynchronous malloc and once
+  free commands have completed.
 * If the memory is not constructed from a user provided memory allocation, when
   the threshold size of the memory pool is set, the value specified will round
   down to the nearest multiple of the allocation chunk size and the memory pool
@@ -392,7 +408,7 @@ namespace ext::oneapi::experimental {
 class memory_pool {
 
   template <typename Properties = empty_properties_t>
-  memory_pool(context ctx, Properties props = {});
+  memory_pool(context ctx, usm::alloc kind, Properties props = {});
 
   template <typename Properties = empty_properties_t>
   memory_pool(context ctx, device dev, usm::alloc kind, Properties props = {});
@@ -413,15 +429,13 @@ class memory_pool {
 
   size_t get_allocation_chunk_size() const;
 
-  size_t get_max_size() const;
-
   size_t get_threshold() const;
 
-  size_t get_current_size() const;
+  size_t get_reserved_size_current() const;
 
-  size_t get_free_size() const;
+  size_t get_used_size_current() const;
 
-  void set_new_threshold(size_t newThreshold);
+  void increase_threshold_to(size_t newThreshold);
 
 }; // memory_pool
 
@@ -431,12 +445,15 @@ class memory_pool {
 [source, c++]
 ----
 template <typename Properties = empty_properties_t>
-memory_pool(context ctx, Properties props = {});
+memory_pool(context ctx, usm::alloc kind, Properties props = {});
 ----
 
 _Effects_: Constructs a memory pool which is associated with the context `ctx`
-and all SYCL devices associated with it, with the allocation kind
-`usm::alloc::host` and applying any properties in `props`.
+and all SYCL devices associated with it, with the allocation kind `kind` and
+applying any properties in `props`.
+
+_Throws_: An exception with the `errc::invalid` error code if `kind` is
+`usm::alloc::device`, `usm::alloc::shared` or `usm::alloc::unknown`.
 
 [source, c++]
 ----
@@ -533,13 +550,6 @@ pool.
 
 [source, c++]
 ----
-size_t get_max_size() const;
-----
-
-_Returns_: The maximum size of the memory pool.
-
-[source, c++]
-----
 size_t get_threshold() const;
 ----
 
@@ -547,7 +557,7 @@ _Returns_: The deallocation threshold of the memory pool.
 
 [source, c++]
 ----
-size_t get_current_size() const;
+size_t get_reserved_size_current() const;
 ----
 
 _Returns_: The total memory allocated to the pool at the point the function is
@@ -555,25 +565,21 @@ called.
 
 [source, c++]
 ----
-size_t get_free_size() const;
+size_t get_used_size_current() const;
 ----
 
-_Returns_: The total free memory in the pool at the point the function is
-called.
+_Returns_: The total memory which has been allocated to USM pointers by the pool
+at the point the function is called.
 
 [source, c++]
 ----
-void set_new_threshold(size_t newThreshold);
+void increase_threshold_to(size_t newThreshold);
 ----
 
-_Effects_: Sets the deallocation threshold of the memory pool if the value of
-`newThreshold` is larger than the current threshold. If `newThreshold` is not a
-multiple of the allocation chunk size, the new threshold is rounded down to the
-nearest multiple.
-
-_Throws_: An exception with the `errc::invalid` error code if the value of
-`newThreshold` is lower than the current threshold or larger than the maximum
-allocation size.
+_Effects_: Set the deallocation threshold of the memory pool if the value of
+`newThreshold` is larger than the current threshold, otherwise leaves it as it
+currently is. If `newThreshold` is not a multiple of the allocation chunk size,
+the new threshold is rounded down to the nearest multiple.
 
 
 === Memory pool properties
@@ -620,7 +626,7 @@ using zero_init_key = zero_init;
 |The `initial_threshold` property specifies the initial deallocation threshold
  value for the memory pool. If this property is not used the default value is
  zero, and this can be increased after the memory pool is created by calling
- `memory_pool::set_new_threshold`.
+ `memory_pool::increase_threshold_to`.
 
 |`maximum_size`
 |The `maximum_size` property specifies the maximum size of the memory pool,
@@ -631,9 +637,14 @@ using zero_init_key = zero_init;
  If this property is not used the default value is implementation-defined.
 
 |`read_only`
-|The `read_only` property is a performance hint which asserts that all memory
- allocations from the memory pool will only ever be read from within SYCL kernel
- functions, this can be used by the SYCL runtime to optimize for performance.
+|The `read_only` property is an assertion by the application that allocations
+from this pool will never be written from a kernel. Implementations may be able
+to perform certain optimizations when a memory pool is created with this
+property.
+
+[Note: A memory pool created with the `read_only` property may still be written
+from the host and may still be the destination of a memory copy operation that
+is submitted to a device. -- end note]
 
 |`zero_init`
 |The `zero_init` property adds the requirement that all memory allocated to the
@@ -661,7 +672,8 @@ semantics.
 ----
 class context {
 
-  memory_pool context::ext_oneapi_get_default_memory_pool() const;
+  memory_pool context::ext_oneapi_get_default_memory_pool(usm::alloc kind)
+    const;
 
   memory_pool context::ext_oneapi_get_default_memory_pool(device dev,
     usm::alloc kind) const;
@@ -671,11 +683,14 @@ class context {
 
 [source, c++]
 ----
-memory_pool context::ext_oneapi_get_default_memory_pool() const;
+memory_pool context::ext_oneapi_get_default_memory_pool(usm::alloc kind) const;
 ----
 
 _Returns_: The default memory pool associated with the context for allocating
-with the allocation kind `usm::alloc::host`.
+with the allocation kind `kind`.
+
+_Throws_: An exception with the `errc::invalid` error code if `kind` is
+`usm::alloc::device`, `usm::alloc::shared` or `usm::alloc::unknown`.
 
 [source, c++]
 ----
@@ -750,8 +765,11 @@ for the allocation. Accessing the memory at the address of the pointer returned
 by asynchronous malloc functions before the command has completed execution is
 undefined behavior.
 
-_Returns_: A pointer to the address of a memory reservation if `size` is
-non-zero, otherwise returns `nullptr`.
+_Returns_: A pointer to the address of a memory reservation. When the allocation
+size is zero bytes, these functions behave in a manner consistent with C++
+`std::malloc`. The value returned is unspecified in this case, and the returned
+pointer may not be used to access storage. If this pointer is not `null`, it
+must be passed to `sycl::async_free` to avoid a memory leak.
 
 _Throws_: An exception with the `errc::memory_allocation` error code if the
 allocation brings the memory pool over the maximum size. This error must be
@@ -766,12 +784,9 @@ void async_free(handler h, void *ptr);
 ----
 
 _Effects_: Enqueues a command to `q` or the SYCL queue associated with `h` which
-will asynchronously free the memory allocation at the address of `ptr`. Memory
-will be freed from the memory pool to be used by other asynchronous malloc
-commands which execute later, and will not free until the SYCL queue associated
-with the asynchronous allocation command has been synchronized with. Accessing
-the memory at the address of `ptr` after the asynchronous free command has
-completed execution is undefined behavior. If `ptr` is not the address of a
+will asynchronously free the memory allocation at the address of `ptr`.
+Accessing the memory at the address of `ptr` after the asynchronous free command
+has completed execution is undefined behavior. If `ptr` is not the address of a
 memory allocation allocated to a memory pool this is undefined behavior. 
 
 
