--- a/sycl/doc/extensions/experimental/sycl_ext_oneapi_bindless_images.asciidoc
+++ b/sycl/doc/extensions/experimental/sycl_ext_oneapi_bindless_images.asciidoc
@@ -1233,9 +1233,9 @@ public:
 
 To enable the copying of images an `ext_oneapi_copy` function is proposed as a 
 method of the queue and handler. It can be used to copy image memory, whether 
-allocated through USM or using an `image_mem_handle`, from host to 
-device, device to host or device to device. For the `ext_oneapi_copy` variants
-that do not take  offsets and extents, the image descriptor passed to the
+allocated through USM or using an `image_mem_handle`, from host to device,
+device to host or device to device. For the `ext_oneapi_copy` variants that do
+not take  offsets and extents, the image descriptor passed to the
 `ext_oneapi_copy` API is used to determine the pixel size, dimensions, and
 extent in memory of the image to copy. If performing sub-region copy, the size
 of the memory region is also determined by the offsets and extent passed.
